2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: delay=31 ==> delay=10
	* gameswf/gameswf_as_classes/as_netstream.cpp: fixed a bit bug
	* gameswf/samples/video.(fla,swf): updated, 
	It is possible to start simultaneously 4 video and Flash animation

2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	video queue is running in decoder thread therefore 
	mutex is not needed. Added comments.

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.(cpp,h): reverted
	hash< as_object_interface*, .. <== hash< smart_ptr<as_object_interface>, 
	* gameswf/gameswf_video_base.(cpp,h),
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_mutex.h,
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	The beginnings of job on stabilization video

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_mutex.(cpp,h): added tu_mutex type,
	We have redefined SDL mutex functions that
	there was an opportunity to use other libraries (pthread, ...)
	* gameswf/gameswf_sound_handler.(cpp,h):
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	SDL_Mutex ==> tu_mutex

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.(cpp,h):
	hash< as_object_interface*, .. ==> hash< smart_ptr<as_object_interface>, ..
	to prevent premature deleting of object

2007-03-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/win32/VC8/gameswf.vcproj: dlmalloc.(c,h) are removed from project
	because there are enough VC8++ toolkit
	* gameswf/gameswf_netstream.(cpp,h): removed useless struct netstream
	* gameswf/gameswf.h,
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_sound_handler.(cpp,h): void* ==> as_object_interface

2007-03-04  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: class video_stream_instance ==> struct ...
	* gameswf/gameswf_video_impl.(cpp,h): pointers ==> smart_ptr<>